--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,25 @@ body {
     background-size: cover;
 }
 
+button {
+	background-color: rgb(240, 173, 219);
+	border-color: rgb(67, 50, 103);
+	color: rgb(67, 50, 103);
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 2em;
+	margin: auto;
+	width: 50%;
+}
+
+button:active {
+	border-style: inset;
+	border-width: thick;
+}
+
+button:hover {
+	background-color: rgb(200, 178, 234);
+}
+
 h1 {
 	font-family: 'Lakki Reddy', 'Merienda', 'Neucha', 'Sedgwick Ave Display', 'Kaushan Script', cursive;
 	font-size: 4em;
@@ -24,6 +43,7 @@ header {
 
 .answer-option:hover {
 	background-color: rgb(200, 178, 234);
+	border-style: solid;
 }
 
 .container {
@@ -34,7 +54,7 @@ header {
 	width: 960px;
 }
 
-.btn-start {
+/*.btn-start, #btn-submit {
 	background-color: rgb(240, 173, 219);
 	border-color: rgb(67, 50, 103);
 	color: rgb(67, 50, 103);
@@ -42,16 +62,16 @@ header {
 	font-size: 2em;
 	margin: auto;
 	width: 50%;
-}
+}*/
 
-.btn-start:active {
+/*.btn-start:active, #btn-submit:active {
 	border-style: inset;
 	border-width: thick;
-}
+}*/
 
-.btn-start:hover {
+/*.btn-start:hover, #btn-submit:hover {
 	background-color: rgb(200, 178, 234);
-}
+}*/
 
 .game-div {
 	height: 80vh;
