--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
 	background-image: url("../images/background.jpg");
+	/*background-repeat: no-repeat;*/
     background-size: cover;
 }
 
@@ -73,9 +74,6 @@ header {
 	background-color: rgb(200, 178, 234);
 }*/
 
-.game-div {
-	height: 80vh;
-}
 
 
 
